@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
+    <Filter Include="Resource Files\Images">
+      <UniqueIdentifier>{6b19a091-ecf3-43f6-8756-eabd86ca6db7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
@@ -51,71 +54,98 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
+    <Image Include="resources\active_search.bmp">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
     <Image Include="resources\active_search.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\inactive_search.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\application.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\application_go.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\arrow_refresh.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\chart_line.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\cog_edit.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\cross.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\find.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\application_go.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\arrow_refresh.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\chart_line.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\cog_edit.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\cross.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\find.bmp">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\Images</Filter>
     </Image>
     <Image Include="resources\application.bmp">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\Images</Filter>
     </Image>
-    <Image Include="resources\active_search.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\inactive_search.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="resources\application_get.png">
-      <Filter>Resource Files</Filter>
+    <Image Include="resources\application.png">
+      <Filter>Resource Files\Images</Filter>
     </Image>
     <Image Include="resources\application_get.bmp">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\Images</Filter>
     </Image>
-    <Image Include="resources\lightbulb_off.png">
-      <Filter>Resource Files</Filter>
+    <Image Include="resources\application_get.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\application_get_modern.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\application_go.bmp">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\application_go.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\application_go_modern.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\application_modern.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\arrow_refresh.bmp">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\arrow_refresh.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\arrow_refresh_modern.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\chart_line.bmp">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\chart_line.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\chart_line_modern.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\cog_edit.bmp">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\cog_edit.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\cog_edit_modern.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\cross.bmp">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\cross.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\cross_modern.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\find.bmp">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\find.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\find_modern.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\inactive_search.bmp">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\inactive_search.png">
+      <Filter>Resource Files\Images</Filter>
     </Image>
     <Image Include="resources\lightbulb_off.bmp">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\lightbulb_off.png">
+      <Filter>Resource Files\Images</Filter>
+    </Image>
+    <Image Include="resources\lightbulb_off_modern.png">
+      <Filter>Resource Files\Images</Filter>
     </Image>
   </ItemGroup>
 </Project>
