@@ -1,4 +1,5 @@
 2.2
+ * Added Modern Toolbar theme
  * Added portable Toolbar customization
  * Added Toolbar power menu (ported from PH1.x)
  * Fixed Toolbar DPI scaling issues
